# rtic_f4xx_nucleo

./: Cargo.toml  README.md  memory.x  timing_resources.objdump  timing_task.objdump
.cargo/: config
examples/: rtt_simple.rs  rtt_timing.rs  timing_exam.rs  timing_resources.rs  timing_resources2.rs  timing_task.rs
src/: main.rs
