[package]
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2018"
readme = "README.md"
name = "app"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.13"
cortex-m-rtic = "0.5.5"

# tracing
cortex-m-semihosting = "0.3.5"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }

# panic handlers
panic-halt = "0.2.0"
panic-semihosting = "0.5.4"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

[dependencies.stm32f4]
version = "0.12.1"
features = ["stm32f411", "rt"]

[features]
nightly = ["cortex-m/inline-asm"]

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
